--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@ In particular, we propose to work on creating (1) a written governance document 
 Furthermore, we plan to systematically evaluate the effects of our project on the \ds\ ecosystem by measuring changes to important metrics (number of unique contributors, diversity of contributors. 
 The result of this project will be a self-sustaining open-source ecosystem for \ds, which will allow it to grow into a locus for the widespread practical application of generalized unit testing.
 
-\subsection*{Intellectual Merit.} 
+\subsection*{Intellectual Merit} 
 \vspace{-2mm}
 Testing of self-contained software modules by \emph{unit testing} performed by developers is one of the backbones of the modern software development process.  However, manual unit testing is seriously limited in effectiveness by 1) the tendency of assumptions developers make in writing code to creep into how they test code and 2) the extreme slowness of human construction of test cases compared to modern automated testing methods.  \emph{Fuzzing} is an extremely powerful method for exploring the behavior of code to find bugs, but is seldom used by ``normal'' developers for testing their code, and fuzzing tools are focused on finding crash-inducing bugs that lead to exploits.  Bridging the gap between normal developers doing unit testing and the power of fuzzing will enable a wide variety of new research lines in software testing and specification.
 
