--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[numbers]{proposalnsf}
 
-\title{POSE: Phase II: Practical Extensible Mutation Generation and Management for Any Language}
+\title{POSE: Phase II: \ds: Practical Extensible Mutation Generation and Management for Any Language}
 \author{Alex Groce }
 \date{August 2023}
 
@@ -8,7 +8,7 @@
 
 \begin{document}
 
-\section*{POSE: Phase II: Property-Driven Generalized Unit Fuzzing and Symbolic Execution for C and C++ Code}
+\section*{POSE: Phase II: \ds: Property-Driven Generalized Unit Fuzzing and Symbolic Execution for C and C++ Code}
 
 \subsection*{Overview}
 \vspace{-2mm}
