Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,7 @@
 \documentclass[numbers]{proposalnsf}
 
+\usepackage{url}
+
 \title{POSE: Phase II: \ds: Practical Extensible Mutation Generation and Management for Any Language}
 \author{Alex Groce }
 \date{August 2023}
@@ -57,6 +59,9 @@ There is no need to argue the massive importance of computer software to almost 
 
 
 \subsection{A substantial base of users and contributors already exists}
+
+\ds\ itself has been modified by 19 different contributors, ranging from academia to industry, of whom only two are associated with the original paper on \ds. At least 13
+ different github users have contributed issues, and \ds\ currently has 82 open and 162 closed issues.  The estimated user base is considerably larger:  during a typical week, \ds\ is cloned 59 times and visited by 85 different users.  \ds\ has been starred 780 times and forked 85 times.  \ds\ is listed on a large number of pages providing resources for fuzzing and hacking (e.g., the very popular "Awesome Hacking" list at https://github.com/jekil/awesome-hacking), including in Google's official Honggfuzz repository.
 
 \subsubsection{Letters of collaboration from users and contributors in academia and industry}
 
