--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 
 \usepackage{url}
 
-\title{POSE: Phase II: \ds: Practical Extensible Mutation Generation and Management for Any Language}
+\title{POSE: Phase II: \ds: Property-Driven Generalized Unit Fuzzing and Symbolic Execution for C and C++ Code}
 \author{Alex Groce }
 \date{August 2023}
 
