--- a/data-management-plan.tex
+++ b/data-management-plan.tex
@@ -11,12 +11,12 @@
   {\Large\sf\textbf{POSE: Phase II: DeepState: Property-Driven Generalized Unit Fuzzing and Symbolic Execution for C and C++ Code}}
 \end{center}
 
-The data in the proposed project is primarily source code for The
-source code will be released either in a project GitHub repository (or
-respositories) to be created. Any experimental data should be reproducible using the code artifacts, but will also be published in a condensed form in the repositories.
+The data in the proposed project is primarily source code for the open
+source project to be developed.  This project has an existing
+repository that contains the existing source code, to which the PI has
+full access.
 
-Curricular
-materials and documentation associated with any tools will also be stored in
+Documentation and curricular items associated with any tools will also be stored in
 an open source repository, since in this project the primary
 educational benefits are linked to the use of these tools.  Using GitHub automatically provides us with excellent backup
 and archiving for the code and curricular material products of the
