Updates from Overleaf

--- a/key-personnel.tex
+++ b/key-personnel.tex
@@ -21,6 +21,9 @@
   \item TBD; Northern Arizona University (NAU); Full-time Software Engineer
   \item TBD; Northern Arizona University (NAU); Graduate Student
   \item NAME OF PEOPLE FROM COMMUNITY WHO WILL PROVIDE LETTER
+  \item David Pokora, Trail of Bits
+  \item Toby Hocking, Northern Arizona University
+  \item Klaus Havelund, Jet Propulsion Laboratory
 \end{enumerate}
 
 \end{document}
