--- a/main.tex
+++ b/main.tex
@@ -16,17 +16,14 @@
 \vspace{-2mm}
 
 
-The complexity of modern software systems, and the need for widely used libraries and other ``code infrastructure'' to be absolutely reliable, demands effective \emph{testing}.  Bugs in code have increasing impact on society at large (e.g., numerous security breaches traceable to incorrect code, and very high economic cost.  Testing remains to this day the single most effective means of finding bugs when their cost is low.   Moreover, fuzzing, originally limited largely to the software security world, is the most promising new approach to massively automated and effective testing of software.  Unfortunately, fuzzing has two major limitations: first, outside the world of cybersecurity, very few developers know how to use fuzzers.  Second, fuzzing tends to focus, due to its heritage from the security world of being used by outside analysts looking for memory-safety bugs that can be used to construct exploits, on finding program crashes, not probing more complex and subtle notions of correctness.  \ds\ is a tool that allows developers, without learning the idiosyncracies of the many individual fuzzers available, to use \emph{any} modern fuzzer to test their code.  More importantly, \ds\ allows users to apply fuzzing to property-driven testing, which can be thought of us \emph{generalized unit testing}.  Developers are seldom interested in crashes per se, vs. the functional correctness of code; unit testing is the method for checking correctness they are most familliar with.  \ds\ meets developers where they are, letting the use the power of fuzzing (or symbolic execution, when it scales) to test their code, by providing them with a more powerful version of the unit testing they already know how to use.
+The complexity of modern software systems, and the need for widely used libraries and other ``code infrastructure'' to be absolutely reliable, demands effective \emph{testing}.  Bugs in code have increasing impact on society at large.  Testing remains to this day the single most effective means of finding bugs.   Fuzzing, originally limited largely to the software security world, is the most promising new approach to automated and effective testing of software.  Unfortunately, fuzzing has two major limitations: first, outside the world of cybersecurity, very few developers know how to use fuzzers.  Second, fuzzing tends to focus, due to its heritage from the security world, on finding program crashes, not probing more complex notions of correctness.  \ds\ is a tool that allows developers, without learning the idiosyncrasies of  individual fuzzers, to use \emph{any} modern fuzzer to test their code.  More importantly, \ds\ allows users to apply fuzzing to property-driven testing, a kind of \emph{generalized unit testing}.  Developers are seldom interested in crashes per se, vs. the functional correctness of code; unit testing is the method for checking correctness they are most familliar with.  \ds\ meets developers where they are, letting the use the power of fuzzing to test their code, by providing them with a more powerful version of the unit testing they already  use.
 
-However, the growth of \ds\ is limited by (1) its flat/informal leadership structure with only one author at the top who can approve new code contribution and (2) lack of documentation, (3) lack of external contributors from various associated communities, and (4) especially complexity of installation and integration with existing projects.
-We propose to expand the open-source ecosystem of users, contributors, and developers of \ds, by fixing these problems.
-In particular, we propose to work on creating (1) a written governance document with a new hierarchical leadership structure, (2) new documentation materials for onboarding new users/contributors, including translations and community standards to encourage diversity/inclusion, and (3) infrastructure for connecting \ds\ to other tools.
-Furthermore, we plan to systematically evaluate the effects of our project on the \ds\ ecosystem by measuring changes to important metrics (number of unique contributors, diversity of contributors. 
-The result of this project will be a self-sustaining open-source ecosystem for \ds, which will allow it to grow into a locus for the widespread practical application of generalized unit testing.
+The growth of \ds\ is limited by (1) its flat/informal leadership structure with only a small number of individuals  who can approve new code contributions (2) lack of documentation, (3) lack of external contributors from various associated communities, and (4) high complexity of installation and integration with existing projects, and unstable nature of package and container releases.
+We propose to (1) create a written governance document with a new hierarchical leadership structure, (2) write new documentation materials for onboarding new users/contributors, including translations and community standards to encourage diversity/inclusion, and (3) develop infrastructure for connecting \ds\ to other tools.  Most critically, we will ensure that deployment of \ds\ and integration into exiting build environments is seamless enough to encourage frustrated users.
 
 \subsection*{Intellectual Merit} 
 \vspace{-2mm}
-Testing of self-contained software modules by \emph{unit testing} performed by developers is one of the backbones of the modern software development process.  However, manual unit testing is seriously limited in effectiveness by 1) the tendency of assumptions developers make in writing code to creep into how they test code and 2) the extreme slowness of human construction of test cases compared to modern automated testing methods.  \emph{Fuzzing} is an extremely powerful method for exploring the behavior of code to find bugs, but is seldom used by ``normal'' developers for testing their code, and fuzzing tools are focused on finding crash-inducing bugs that lead to exploits.  Bridging the gap between normal developers doing unit testing and the power of fuzzing will enable a wide variety of new research lines in software testing and specification.
+Testing of self-contained software modules by \emph{unit testing} performed by developers is one of the backbones of the modern software development process.  However, manual unit testing is seriously limited in effectiveness by 1) the tendency of assumptions developers make in writing code to creep into how they test code and 2) the extreme slowness of human construction of test cases compared to modern automated testing methods.  \emph{Fuzzing} is an extremely powerful tool, but is seldom used by ``normal'' developers for testing their code, and fuzzing tools are focused on finding crash-inducing bugs that lead to exploits.  Bridging the gap between normal developers doing unit testing and the power of fuzzing will enable a wide variety of new research lines in software testing and specification.
 
 \subsection*{Broader Impacts}
 \vspace{-2mm}
@@ -47,10 +44,14 @@ CISE; fuzzing; unit testing; property-based testing; generalized unit testing
 
 \vspace{-2mm}\subsection{Problem and societal need that will be addressed: construction of effective tests for software systems}
 
-There is no need to argue the massive importance of computer software to almost every facet of modern life, economic, political, and personal.  From the underpinnings of the energy infrastructure to the methods people use to communicate with friends and family, software systems support human life.  Faulty software has vast economic costs, and increasingly may have potential to inflict serious loss of life.  \emph{Software testing} remains the most widely used and scalable approach to finding and preventing serious bugs in software systems.  However, software testing has always faced a fundamental problem: humans writing tests will tend to be influence by the same assumptions and limitations that result in the presence of bugs, even when those humans are different from those who wrote the code, and especially when the same humans write and test code, as is usual with unit tests.
+There is no need to argue the massive importance of computer software to almost every facet of modern life, economic, political, and personal.  From the underpinnings of the energy infrastructure to the methods people use to communicate with friends and family, software systems support human life.  Faulty software has vast economic costs, and increasingly may have potential to inflict serious loss of life.  \emph{Software testing} remains the most widely used and scalable approach to finding and preventing serious bugs in software systems.  However, software testing has always faced a fundamental problem: humans writing tests will tend to be influenced by the same assumptions and limitations that result in the presence of bugs, even when those humans are different from those who wrote the code, and especially when the same humans write and test code, as is usual with unit tests.
+
+A variety of solutions have been offered to this problem, in particular the idea of parameterized or generalized unit tests.  
 
 
 \subsection{\ds,  a practical, extensible mutation generation and management tool for any language}
+
+
 
 \paragraph{License.}
 
@@ -67,6 +68,8 @@ There is no need to argue the massive importance of computer software to almost 
 
 
 \subsection{Problems with current development model, dissemination methods, and testing}
+
+The key 
 
 \subsubsection{Problems with flat development model}
 
